--- a/src/scss/base/common.scss
+++ b/src/scss/base/common.scss
@@ -1,6 +1,3 @@
-
-
-
 body {
   overflow: hidden visible;
   &.no-scroll {
@@ -9,4 +6,13 @@ body {
 }
 ::-webkit-scrollbar {
   display: none;
+}
+
+.container {
+  // max-width: 100%;
+  max-width: 1480px;
+  width: 100%;
+  margin: 0 auto;
+  // padding: 0 calc((100% - 1420px) / 2);
+  padding: 0 30px;
 }
