add header intro plane feature comfort sections

--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -1,13 +1,13 @@
 <header class="header">
   <div class="header__inner">
     <div class="header__block">
-      <div class="header__logo">@@include('../shared/logo.html')</div>
-      <div class="header__right dropdown-anim" data-pl="30">
-        <!-- <div class="header__nav-dropdown-bg"></div> -->
+      <a href="#" class="header__logo">@@include('../shared/logo.html')</a>
+      <div class="header__right">
+        <div class="header__nav-dropdown-bg"></div>
         <div class="header__right-inner">
           <div class="header__nav">
             <ul class="header__nav-list">
-              <li class="header__nav-item dropdown open">
+              <li class="header__nav-item dropdown">
                 <div class="header__nav-item-main">
                   <p>О компании</p>
                   <span> @@include('../shared/arrow.html') </span>
