--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,5 +16,8 @@
 
 // Home Page
 @import "./sections/intro";
+@import "./sections/plane";
+@import "./sections/feature";
+@import "./sections/comfort";
 
 
