--- a/src/scss/base/libs.scss
+++ b/src/scss/base/libs.scss
@@ -1,7 +1,9 @@
 //Swiper
 @import "node_modules/swiper/swiper";
 @import "node_modules/swiper/modules/pagination";
+@import "node_modules/swiper/modules/navigation";
 @import "node_modules/swiper/modules/autoplay";
+@import "node_modules/swiper/modules/effect-fade";
 
 // Fancybox
 @import "node_modules/@fancyapps/ui/dist/fancybox/fancybox";
