--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -15,17 +15,13 @@
     padding-top: 30px;
     padding-left: 30px;
     width: 100%;
+    position: relative;
     &-inner {
       display: flex;
       align-items: center;
       gap: 50px;
     }
     &.dropdown-anim {
-      background: #fff;
-      .header__nav-dropdown-bg {
-        opacity: 1;
-        scale: 1;
-      }
       .header {
         &__nav {
           &-item {
@@ -45,10 +41,9 @@
               }
             }
           }
-          &-dropdown {
-            &-bg {
-              scale: 1;
-            }
+          &-dropdown-bg {
+            opacity: 1;
+            scale: 1;
           }
         }
         &__phone {
@@ -59,12 +54,8 @@
             }
           }
         }
-        &__search {
-          &-svg {
-            path {
-              fill: #6f2db5;
-            }
-          }
+        &__search-svg path {
+          fill: #6f2db5;
         }
         &__lang-selected {
           background: #6f2db5;
@@ -72,10 +63,15 @@
         }
       }
     }
+    .header__nav-dropdown-items {
+      &.anim-delay {
+        transition: 0.5s ease 0.5s;
+      }
+    }
   }
   &__logo {
     width: 300px;
-    height: auto;
+    height: fit-content;
     padding-top: 25px;
     margin-right: 50px;
     svg {
@@ -131,15 +127,25 @@
       }
     }
     &-dropdown {
-      // position: absolute;
-      // top: 60px;
-      // left: 0;
       display: flex;
-      // transform: translate(0, 20%);
-      // opacity: 0;
-      // visibility: hidden;
-      // pointer-events: none;
-      transition: transform 0.5s ease, opacity 0.5s ease, visibility 0.5s ease;
+      padding: 50px 0;
+      &-items {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+        position: absolute;
+        z-index: 2;
+        opacity: 0;
+        transform: translate(0, 20%);
+        visibility: hidden;
+        transition: 0.5s ease;
+        &.open {
+          opacity: 1;
+          visibility: visible;
+          transform: translate(0, 0%);
+          transition: 0.5s ease;
+        }
+      }
       &-item {
         a {
           font-weight: 600;
@@ -153,7 +159,6 @@
       }
       &-bg {
         background: #fff;
-        // border: 1px solid red;
         border-radius: 25px 0 25px 25px;
         position: absolute;
         top: 0;
@@ -161,6 +166,8 @@
         z-index: 1;
         pointer-events: none;
         transform-origin: right top;
+        width: 100%;
+        height: 100%;
         scale: 0;
         opacity: 0;
         transition: scale 0.5s ease, opacity 0.5s ease;
