--- a/src/scss/sections/intro.scss
+++ b/src/scss/sections/intro.scss
@@ -1,12 +1,135 @@
-.intro{
+.intro {
   width: 100%;
   height: 100vh;
-  &__bg{
+  &__bg {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    img {
       object-fit: contain;
+    }
+  }
+  &__inner {
+    position: relative;
+    z-index: 2;
+    padding-top: 23vh;
+  }
+  &__title {
+    font-weight: 700;
+    font-size: 60px;
+    text-transform: uppercase;
+    color: #fff;
+    padding-left: 80px;
+  }
+  &__block {
+    display: flex;
+    justify-content: space-between;
+    background: #fff;
+    padding-left: 80px;
+    margin-top: 75px;
+    border-radius: 30px;
+    height: 530px;
+    overflow: hidden;
+    &-left {
+      display: flex;
+      flex-direction: column;
+      max-width: 530px;
+      width: 100%;
+      height: 100%;
+      padding: 80px 0;
+    }
+    &-heading {
+      font-weight: 700;
+      font-size: 35px;
+      color: #6f2db5;
+      span {
+        font-weight: 600;
+        text-transform: lowercase;
+        color: #2b0d47;
+      }
+    }
+    &-text {
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 139%;
+      color: #2b0d47;
+      margin-top: 20px;
+    }
+    &-bottom {
+      margin-top: auto;
+      display: flex;
+      gap: 35px;
+    }
+    &-navigation {
+      display: flex;
+      gap: 15px;
+      &-prev,
+      &-next {
+        width: 50px;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #f6f6f6;
+        border-radius: 50%;
+        cursor: pointer;
+        position: static;
+        margin: 0;
+        &,
+        & * {
+          transition: 0.5s ease;
+        }
+        svg {
+          width: auto;
+          height: auto;
+        }
+        &::after {
+          content: none;
+        }
+        &:hover {
+          background: #6f2db5;
+          svg path {
+            fill: #f6f6f6;
+          }
+        }
+      }
+      &-next {
+        svg {
+          rotate: 180deg;
+        }
+      }
+    }
+    &-button {
+      background: #d8a94e;
+      border-radius: 38px;
+      padding: 16px 36px;
+      font-weight: 700;
+      font-size: 16px;
+      text-align: center;
+      color: #fff;
+    }
+    &-right {
+      max-width: 680px;
+      width: 100%;
+      height: 100%;
+      position: relative;
+      overflow: hidden;
+      svg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 2;
+        width: auto;
+        height: 100%;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
   }
 }
