--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -1,3 +1,53 @@
 <footer class="footer">
-
+  <div class="footer__inner container">
+    <div class="footer__block">
+      <div class="footer__left">
+        <a href="#" class="footer__logo">@@include('../shared/logo.html')</a>
+        <p class="footer__address">Адрес: <span>Узбекистан, Ташкент, ул ххххххххх</span></p>
+      </div>
+      <nav class="footer__nav">
+        <a href="#">О компании</a>
+        <a href="#">Услуги</a>
+        <a href="#">Новости</a>
+        <a href="#">Вакансии</a>
+        <a href="#">Контакты</a>
+      </nav>
+      <nav class="footer__nav">
+        <a href="#">Карта полетов</a>
+        <a href="#">Наш флот и питание на борту</a>
+        <a href="#">Тарифы</a>
+        <a href="#">Багаж</a>
+        <a href="#">Перевозка животных</a>
+      </nav>
+      <div class="footer__right">
+        <div class="footer__phone">
+          <p class="footer__phone-heading">Наш номер телефона:</p>
+          <a href="tel:998900000000">
+            <img src="./img/icons/phone.svg" alt="" />
+            <span>+99890 000 00 00</span>
+          </a>
+        </div>
+        <div class="footer__social">
+          <p class="footer__social-heading">Наши соц сети:</p>
+          <a href="#">
+            <img src="./img/icons/telegram.svg" alt="" />
+            <span>Чат в Telegram</span>
+          </a>
+          <a href="#">
+            <img src="./img/icons/instagram.svg" alt="" />
+            <span>Наш инстаграмм</span>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="footer__bottom">
+      <p class="footer__bottom-left">Asia Union Airlines © 2023</p>
+      <div class="footer__bottom-right">
+        <img src="./img/icons/alex-logo.svg" alt="" />
+      </div>
+    </div>
+  </div>
+  <div class="footer__plane">
+    <img src="./img/footer/footer-plane.png" alt="" />
+  </div>
 </footer>
