--- a/src/scss/sections/comfort.scss
+++ b/src/scss/sections/comfort.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 300vh;
   background: #621dab;
+  padding-bottom: 200px;
   &__inner {
     display: flex;
     align-items: center;
@@ -49,6 +50,7 @@
       opacity: 0;
       visibility: hidden;
       transition: 0.5s ease;
+      height: 100%;
       &.active {
         opacity: 1;
         visibility: visible;
