--- a/src/scss/sections/feature.scss
+++ b/src/scss/sections/feature.scss
@@ -1,19 +1,24 @@
 .feature {
   width: 100%;
-  height: 100vh;
+  height: auto;
   display: flex;
   align-items: center;
   background: #621dab;
+  padding-top: 200px;
   &__inner {
     position: relative;
+    display: flex;
+    align-items: center;
+    height: 100vh;
   }
   &__block {
     display: flex;
     justify-content: space-between;
     height: 570px;
     position: relative;
+    width: 100%;
   }
-  &__right{
+  &__right {
     display: flex;
     flex-direction: column;
   }
