--- a/src/scss/sections/plane.scss
+++ b/src/scss/sections/plane.scss
@@ -1,14 +1,29 @@
 .plane {
   width: 100%;
+  padding-bottom: 100px;
+  position: relative;
+  background: #621dab;
+  &::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    width: 100%;
+    height: 200px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    transform: translate(0, -100%);
+  }
   &__top {
     position: relative;
     height: 75vh;
     display: flex;
     justify-content: center;
     // outline: 1px solid red;
+    z-index: 2;
   }
   &__inner {
-    margin-top: 120px;
+    margin-top: 80px;
+    z-index: 2;
+    position: relative;
   }
   &__sticky {
     position: sticky;
@@ -17,6 +32,7 @@
     transform: translate(0, -50%);
     height: fit-content;
     // outline: 1px solid green;
+    pointer-events: none;
   }
   &__img {
     scale: 0;
@@ -130,6 +146,65 @@
       height: 5px;
       border-radius: 50%;
       background: #2b0d47;
+    }
+  }
+  &__cloud {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -15%);
+    pointer-events: none;
+    img {
+      // width: 100%;
+      // height: 100%;
+    }
+  }
+  .cloud-top {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-42%, -70%);
+    width: 120%;
+    animation: cloud-move-top 25s linear infinite;
+    pointer-events: none;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+    @keyframes cloud-move-top {
+      0% {
+        transform: translate(-42%, -70%);
+      }
+      50% {
+        transform: translate(-58%, -70%);
+      }
+      100% {
+        transform: translate(-42%, -70%);
+      }
+    }
+  }
+  .cloud-bot {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-42%, 40%);
+    width: 120%;
+    animation: cloud-move-bot 25s linear infinite;
+    pointer-events: none;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+    @keyframes cloud-move-bot {
+      0% {
+        transform: translate(-42%, 40%);
+      }
+      50% {
+        transform: translate(-58%, 40%);
+      }
+      100% {
+        transform: translate(-42%, 40%);
+      }
     }
   }
 }
