add about fleet fleet-inner page

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -2,7 +2,7 @@
   <div class="footer__inner container">
     <div class="footer__block">
       <div class="footer__left">
-        <a href="#" class="footer__logo">@@include('../shared/logo.html')</a>
+        <a href="./" class="footer__logo">@@include('../shared/logo.html')</a>
         <p class="footer__address">Адрес: <span>Узбекистан, Ташкент, ул ххххххххх</span></p>
       </div>
       <nav class="footer__nav">
