--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -1,9 +1,9 @@
-<header class="header">
+<header class="header @@color">
   <div class="header__inner">
     <div class="header__inner-bg"></div>
     <div class="header__inner-overlay"></div>
     <div class="header__block">
-      <a href="#" class="header__logo">@@include('../shared/logo.html')</a>
+      <a href="./" class="header__logo">@@include('../shared/logo.html')</a>
       <div class="header__right">
         <div class="dropdown-bg"></div>
         <div class="header__right-inner">
@@ -27,7 +27,7 @@
             </ul>
             <div class="dropdown">
               <a href="./about.html">Информация о компании</a>
-              <a href="#">Наш флот</a>
+              <a href="./fleet.html">Наш флот</a>
               <a href="#">Питание на борту</a>
               <a href="#">Карта полетов</a>
             </div>
