--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -4,6 +4,9 @@
   top: 0;
   z-index: 999;
   &.white & {
+    &__inner::before {
+      background: #f6f6f6;
+    }
     &__inner-bg {
       background: rgba(255, 255, 255, 1);
     }
@@ -73,6 +76,17 @@
   &__inner {
     padding-left: calc((100vw - 1420px) / 2);
     height: 100px;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -2px;
+      width: 100%;
+      height: 2px;
+      background: transparent;
+      transition: 0.5s ease;
+    }
     @media (max-width: 1480px) {
       padding-left: 30px;
     }
@@ -309,7 +323,7 @@
       transform: translate(calc(-50% + 15px), 50px);
       opacity: 0;
       visibility: hidden;
-      // transition: 0.5s ease;
+      transition: 0.5s ease;
       padding-top: 20px;
       &-svg {
         position: absolute;
