--- a/src/scss/sections/info.scss
+++ b/src/scss/sections/info.scss
@@ -1,6 +1,6 @@
 .info {
   width: 100%;
-  height: 70vh;
+  padding-top: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
