--- a/src/scss/sections/plane.scss
+++ b/src/scss/sections/plane.scss
@@ -1,209 +1,211 @@
-.plane {
-  width: 100%;
-  padding-bottom: 100px;
-  position: relative;
-  background: #621dab;
-  &::before {
-    position: absolute;
-    content: "";
-    top: 0;
+main#main {
+  .plane {
     width: 100%;
-    height: 200px;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-    transform: translate(0, -100%);
-  }
-  &__top {
+    padding-bottom: 100px;
     position: relative;
-    height: 75vh;
-    display: flex;
-    justify-content: center;
-    // outline: 1px solid red;
-    z-index: 2;
-  }
-  &__inner {
-    margin-top: 80px;
-    z-index: 2;
-    position: relative;
-  }
-  &__sticky {
-    position: sticky;
-    // top: 0;
-    top: 50%;
-    transform: translate(0, -50%);
-    height: fit-content;
-    // outline: 1px solid green;
-    pointer-events: none;
-  }
-  &__img {
-    scale: 0;
-    opacity: 0;
-    visibility: hidden;
-  }
-  &__title {
-    font-weight: 700;
-    font-size: 50px;
-    color: #2b0d47;
-    text-align: center;
-  }
-  &__card {
-    margin-top: 65px;
-    display: flex;
-    gap: 30px;
-    &-item {
+    background: #621dab;
+    &::before {
+      position: absolute;
+      content: "";
+      top: 0;
       width: 100%;
-      padding: 35px 35px 45px;
-      background: #fff;
-      border-radius: 20px;
+      height: 200px;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+      transform: translate(0, -100%);
+    }
+    &__top {
+      position: relative;
+      height: 75vh;
       display: flex;
-      flex-direction: column;
-      cursor: pointer;
-      overflow: hidden;
-      &:hover {
-        .plane__card {
-          &-icon::before {
-            transform: translate(-50%, -50%) scale(15);
-          }
-          &-heading,
-          &-text,
-          &-info {
-            color: #fff;
-          }
-          &-point {
-            background: #fff;
+      justify-content: center;
+      // outline: 1px solid red;
+      z-index: 2;
+    }
+    &__inner {
+      margin-top: 80px;
+      z-index: 2;
+      position: relative;
+    }
+    &__sticky {
+      position: sticky;
+      // top: 0;
+      top: 50%;
+      transform: translate(0, -50%);
+      height: fit-content;
+      // outline: 1px solid green;
+      pointer-events: none;
+    }
+    &__img {
+      scale: 0;
+      opacity: 0;
+      visibility: hidden;
+    }
+    &__title {
+      font-weight: 700;
+      font-size: 50px;
+      color: #2b0d47;
+      text-align: center;
+    }
+    &__card {
+      margin-top: 65px;
+      display: flex;
+      gap: 30px;
+      &-item {
+        width: 100%;
+        padding: 35px 35px 45px;
+        background: #fff;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        cursor: pointer;
+        overflow: hidden;
+        &:hover {
+          .plane__card {
+            &-icon::before {
+              transform: translate(-50%, -50%) scale(15);
+            }
+            &-heading,
+            &-text,
+            &-info {
+              color: #fff;
+            }
+            &-point {
+              background: #fff;
+            }
           }
         }
+        & * {
+          position: relative;
+          transition: 0.5s ease;
+        }
       }
-      & * {
+      &-icon {
+        width: 66px;
+        height: 66px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #6f2db5;
+        border-radius: 50%;
         position: relative;
-        transition: 0.5s ease;
+        img {
+          position: relative;
+        }
+        &::before {
+          content: "";
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%) scale(1);
+          background: #6f2db5;
+          width: 100%;
+          height: 100%;
+          transform-origin: center;
+          border-radius: 50%;
+          transition: 0.5s ease;
+        }
+      }
+      &-heading {
+        font-weight: 800;
+        font-size: 20px;
+        color: #2b0d47;
+        margin-top: 30px;
+      }
+      &-desc {
+        font-weight: 800;
+        font-size: 16px;
+        line-height: 150%;
+        color: #d8a94e;
+        margin-top: 25px;
+      }
+      &-text {
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 171%;
+        color: #2b0d47;
+      }
+      &-info {
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 150%;
+        color: #2b0d47;
+        margin-top: 15px;
+      }
+      &-lists {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 15px;
+      }
+      &-list {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+      &-point {
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        background: #2b0d47;
       }
     }
-    &-icon {
-      width: 66px;
-      height: 66px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #6f2db5;
-      border-radius: 50%;
-      position: relative;
+    &__cloud {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translate(-50%, -15%);
+      pointer-events: none;
       img {
-        position: relative;
+        // width: 100%;
+        // height: 100%;
       }
-      &::before {
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%) scale(1);
-        background: #6f2db5;
+    }
+    .cloud-top {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translate(-42%, -70%);
+      width: 120%;
+      animation: cloud-move-top 25s linear infinite;
+      pointer-events: none;
+      img {
         width: 100%;
         height: 100%;
-        transform-origin: center;
-        border-radius: 50%;
-        transition: 0.5s ease;
+      }
+      @keyframes cloud-move-top {
+        0% {
+          transform: translate(-42%, -70%);
+        }
+        50% {
+          transform: translate(-58%, -70%);
+        }
+        100% {
+          transform: translate(-42%, -70%);
+        }
       }
     }
-    &-heading {
-      font-weight: 800;
-      font-size: 20px;
-      color: #2b0d47;
-      margin-top: 30px;
-    }
-    &-desc {
-      font-weight: 800;
-      font-size: 16px;
-      line-height: 150%;
-      color: #d8a94e;
-      margin-top: 25px;
-    }
-    &-text {
-      font-weight: 600;
-      font-size: 14px;
-      line-height: 171%;
-      color: #2b0d47;
-    }
-    &-info {
-      font-weight: 600;
-      font-size: 14px;
-      line-height: 150%;
-      color: #2b0d47;
-      margin-top: 15px;
-    }
-    &-lists {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin-top: 15px;
-    }
-    &-list {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    &-point {
-      width: 5px;
-      height: 5px;
-      border-radius: 50%;
-      background: #2b0d47;
-    }
-  }
-  &__cloud {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, -15%);
-    pointer-events: none;
-    img {
-      // width: 100%;
-      // height: 100%;
-    }
-  }
-  .cloud-top {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-42%, -70%);
-    width: 120%;
-    animation: cloud-move-top 25s linear infinite;
-    pointer-events: none;
-    img {
-      width: 100%;
-      height: 100%;
-    }
-    @keyframes cloud-move-top {
-      0% {
-        transform: translate(-42%, -70%);
+    .cloud-bot {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translate(-42%, 40%);
+      width: 120%;
+      animation: cloud-move-bot 25s linear infinite;
+      pointer-events: none;
+      img {
+        width: 100%;
+        height: 100%;
       }
-      50% {
-        transform: translate(-58%, -70%);
-      }
-      100% {
-        transform: translate(-42%, -70%);
-      }
-    }
-  }
-  .cloud-bot {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-42%, 40%);
-    width: 120%;
-    animation: cloud-move-bot 25s linear infinite;
-    pointer-events: none;
-    img {
-      width: 100%;
-      height: 100%;
-    }
-    @keyframes cloud-move-bot {
-      0% {
-        transform: translate(-42%, 40%);
-      }
-      50% {
-        transform: translate(-58%, 40%);
-      }
-      100% {
-        transform: translate(-42%, 40%);
+      @keyframes cloud-move-bot {
+        0% {
+          transform: translate(-42%, 40%);
+        }
+        50% {
+          transform: translate(-58%, 40%);
+        }
+        100% {
+          transform: translate(-42%, 40%);
+        }
       }
     }
   }
