--- a/src/scss/pages/fleet-inner/plane.scss
+++ b/src/scss/pages/fleet-inner/plane.scss
@@ -32,5 +32,11 @@ main#fleet-inner {
         height: 100%;
       }
     }
+    &__img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
