--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -22,20 +22,20 @@
                 </div>
               </li>
               <li class="header__nav-item"><a href="#">Новости</a></li>
-              <li class="header__nav-item"><a href="#">Вакансии</a></li>
+              <li class="header__nav-item"><a href="./vacancy.html">Вакансии</a></li>
               <li class="header__nav-item"><a href="#">Контакты</a></li>
             </ul>
             <div class="dropdown">
               <a href="./about.html">Информация о компании</a>
               <a href="./fleet.html">Наш флот</a>
-              <a href="#">Питание на борту</a>
+              <a href="./food.html">Питание на борту</a>
               <a href="#">Карта полетов</a>
             </div>
             <div class="dropdown">
-              <a href="#">Услуги кооторые предоставляет Asia Union Airlines</a>
-              <a href="#">Тарифы</a>
-              <a href="#">Багаж</a>
-              <a href="#">Перевозка животных</a>
+              <a href="./service.html">Услуги кооторые предоставляет Asia Union Airlines</a>
+              <a href="./tarif-inner.html">Тарифы</a>
+              <a href="./bagagge-inner.html">Багаж</a>
+              <a href="./animal.html">Перевозка животных</a>
             </div>
           </nav>
           <a class="header__phone" href="tel:998555069999">
