--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -1,11 +1,15 @@
 .banner {
-  &__inner {
-    position: relative;
+  height: 650px;
+  position: relative;
+  margin-top: 0;
+  &__content {
+    position: absolute;
     width: 100%;
     height: 650px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    top: 0;
     &-img {
       width: 100%;
       height: 100%;
@@ -22,6 +26,7 @@
     height: fit-content;
     position: relative;
     padding: 80px 0;
+    margin-top: auto;
     &::before {
       position: absolute;
       z-index: -1;
@@ -38,9 +43,8 @@
     }
     &-heading {
       font-weight: 700;
-      font-size: 50px;
-      line-height: 96%;
-      text-transform: uppercase;
+      font-size: 45px;
+      line-height: 120%;
       color: #fff;
     }
     &-text {
@@ -48,8 +52,7 @@
       font-size: 18px;
       line-height: 150%;
       color: #fff;
-      margin-top: 10px;
-      max-width: 550px;
+      max-width: 560px;
       width: 100%;
       &:first-of-type {
         margin-top: 35px;
