--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -4,7 +4,8 @@
   background: linear-gradient(to bottom, transparent 0px, transparent 198px, #2b0d47 198px, #2b0d47 100%);
   position: relative;
   padding-top: 200px;
-  margin-top: 100px;
+  margin-top: 30px;
+  overflow: hidden;
   &__inner {
     padding-top: 12vh;
     padding-bottom: 6.4em;
