--- a/src/scss/components/router.scss
+++ b/src/scss/components/router.scss
@@ -5,6 +5,8 @@
   display: flex;
   align-items: center;
   gap: 5px;
+  position: relative;
+  z-index: 2; 
   a,
   span {
     font-weight: 600;
@@ -14,5 +16,14 @@
     font-weight: 700;
     color: #170826;
     display: inline;
+  }
+  &.white {
+    a,
+    span {
+      color: rgba(255, 255, 255, 0.6);
+    }
+    p {
+      color: #fff;
+    }
   }
 }
