final desctop pages

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -6,18 +6,18 @@
         <p class="footer__address">Адрес: <span>Узбекистан, Ташкент, ул ххххххххх</span></p>
       </div>
       <nav class="footer__nav">
-        <a href="#">О компании</a>
-        <a href="#">Услуги</a>
-        <a href="#">Новости</a>
-        <a href="#">Вакансии</a>
-        <a href="#">Контакты</a>
+        <a href="./about.html">О компании</a>
+        <a href="./service.html">Услуги</a>
+        <a href="./news.html">Новости</a>
+        <a href="./vacancy.html">Вакансии</a>
+        <a href="./contacts.html">Контакты</a>
       </nav>
       <nav class="footer__nav">
         <a href="#">Карта полетов</a>
-        <a href="#">Наш флот и питание на борту</a>
-        <a href="#">Тарифы</a>
-        <a href="#">Багаж</a>
-        <a href="#">Перевозка животных</a>
+        <a href="./fleet.html">Наш флот и питание на борту</a>
+        <a href="./tarif-inner.html">Тарифы</a>
+        <a href="./bagagge-inner.html">Багаж</a>
+        <a href="./animal.html">Перевозка животных</a>
       </nav>
       <div class="footer__right">
         <div class="footer__phone">
