--- a/src/scss/pages/tarif-inner/tarif.scss
+++ b/src/scss/pages/tarif-inner/tarif.scss
@@ -1,6 +1,6 @@
 .main#tarif-inner {
   .tarif {
-    margin-top: 100px;
+    position: relative;
     &__heading {
       font-weight: 700;
       font-size: 35px;
