--- a/src/scss/pages/vacancy-inner/vacancy-inner.scss
+++ b/src/scss/pages/vacancy-inner/vacancy-inner.scss
@@ -1,6 +1,6 @@
 .main#vacancy-inner {
   .vacancy {
-    margin-top: 100px;
+    position: relative;
     &__heading {
       font-weight: 600;
       font-size: 35px;
