--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -63,3 +63,9 @@
 
 // resume page
 @import "./pages/resume/resume.scss";
+
+// news page
+@import "./pages/news/news.scss";
+
+// contacts page
+@import "./pages/contacts/contacts.scss";
