--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -21,9 +21,9 @@
                   @@include('../shared/arrow.html')
                 </div>
               </li>
-              <li class="header__nav-item"><a href="#">Новости</a></li>
+              <li class="header__nav-item"><a href="./news.html">Новости</a></li>
               <li class="header__nav-item"><a href="./vacancy.html">Вакансии</a></li>
-              <li class="header__nav-item"><a href="#">Контакты</a></li>
+              <li class="header__nav-item"><a href="./contacts.html">Контакты</a></li>
             </ul>
             <div class="dropdown">
               <a href="./about.html">Информация о компании</a>
