--- a/src/scss/components/router.scss
+++ b/src/scss/components/router.scss
@@ -1,12 +1,14 @@
 .router {
-  padding-top: 35px;
   font-size: 12px;
   line-height: 167%;
   display: flex;
   align-items: center;
   gap: 5px;
-  position: relative;
-  z-index: 2; 
+  position: absolute;
+  top: calc(var(--hh) + 35px);
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 2;
   a,
   span {
     font-weight: 600;
