--- a/src/scss/pages/fleet-inner/plane.scss
+++ b/src/scss/pages/fleet-inner/plane.scss
@@ -2,14 +2,14 @@ main#fleet-inner {
   .plane {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - var(--hh));
+    margin-top: 0;
     &__heading {
       font-weight: 700;
       font-size: 45px;
       letter-spacing: 0.02em;
       text-transform: uppercase;
       color: #fff;
-      margin-top: 75px;
     }
     &__bg {
       position: absolute;
@@ -25,11 +25,13 @@ main#fleet-inner {
       position: absolute;
       bottom: -140px;
       left: 0;
-      width: 100%;
+      width: calc(100% + 100px);
       height: 100%;
       z-index: -1;
+      animation: cloudMove 25s linear infinite;
       img {
         height: 100%;
+        width: 100%;
       }
     }
     &__img {
@@ -37,6 +39,37 @@ main#fleet-inner {
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      img {
+        animation: levitate 15s ease-in-out infinite;
+      }
+    }
+    @keyframes levitate {
+      0% {
+        transform: translateY(0) rotate(0deg);
+      }
+      20% {
+        transform: translateY(-12px) rotate(-3deg);
+      }
+      50% {
+        transform: translateY(-20px) rotate(1.5deg);
+      }
+      80% {
+        transform: translateY(-12px) rotate(-2deg);
+      }
+      100% {
+        transform: translateY(0) rotate(0deg);
+      }
+    }
+    @keyframes cloudMove {
+      0% {
+        transform: translateX(-100px);
+      }
+      50%{
+        transform: translateX(0);
+      }
+      100% {
+        transform: translateX(-100px);
+      }
     }
   }
 }
