--- a/src/scss/pages/resume/resume.scss
+++ b/src/scss/pages/resume/resume.scss
@@ -1,6 +1,6 @@
 .main#resume {
   .resume {
-    margin-top: 100px;
+    position: relative;
     &__heading {
       font-weight: 600;
       font-size: 35px;
